# axact

./: Cargo.toml  README.md
doc/: WithChat.xcf
public/: debug.css  index.css  index.html  index.mjs  reset.css  utils.css
public/components/: app.mjs  chat.mjs  htop.mjs
src/: index.css  index.mjs  lib.rs  main.rs
src/lib/: app_state.rs  data.rs  data_gen.rs  handlers.rs  responses.rs  v2.rs
ui/top-chat/: index.html  package-lock.json
ui/top-chat/public/: index.css  utils.css
ui/top-chat/src/: index.jsx
ui/top-chat/src/components/: app.jsx  chat.jsx  htop.jsx
