[package]
name = "axact"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.9", features = ["macros", "ws"] }
futures = "0.3.26"
chrono = { version = "0.4.24", features = ["serde"] }
gethostname = "0.4.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
sysinfo = "0.28.2"
tokio = { version = "1.26.0", features = ["full"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tower-http = { version = "0.4.0", features = ["fs"] }
